methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:3: error: ';' expected but ',' found.
  var L:Array[Color]={Color.yellow,Color.red,Color.blue,Color.green}
                                  ^